--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </article>
             </section>
             <div class="soc">
-            <p class="text"><b>Не  забувайте  звертатись  по питаннях </b></p>
+            <p class="text"><b>Не  забувайте  звертатись  по питaннях </b></p>
             <article class="soc2">
             <a class="social" href=""><img src="https://cdn.shopify.com/s/files/1/1061/1924/products/Slightly_Smiling_Face_Emoji_87fdae9b-b2af-4619-a37f-e484c5e2e7a4_grande.png?v=1571606036" width="30px" height="30px"></a>
             <a class="social" href=""><img src="https://images.emojiterra.com/google/noto-emoji/v2.034/512px/1f60a.png" width="30px" height="30px"></a>
