--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </header>
         <nav>
             <a class="nav-link" href="">Каталог</a>
-            <a class="nav-link" href="ukrainec228.github.io/about/">Про магазин</a>
+            <a class="nav-link" href="about.html">Про магазин</a>
         </nav>
         <main>
             <h1>Магазин "Хатинка продуктів"</h1>
