--- a/katalog.html
+++ b/katalog.html
@@ -2,7 +2,7 @@
     <h1>Каталог магазину "Хатинка продуктів" </h1>
     <head>
         <title>shop</title>
-        <link rel="stylesheet" href="css/style3.css" type="text/css"/>
+         <link rel="stylesheet" href="css/style3.css">
     </head>
     <body>
         <header>
