--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <a class="katalog" href="">Каталог</a>
         </header>
         <nav>
-            <a class="nav-link" href="">Каталог</a>
+            <a class="nav-link" href="katalog.html">Каталог</a>
             <a class="nav-link" href="about.html">Про магазин</a>
         </nav>
         <main>
