--- a/katalog.html
+++ b/katalog.html
@@ -7,8 +7,8 @@
     <body>
         <header>
               <nav>
-            <a class="nav-link" href="">Каталог</a>
-            <a class="nav-link" href="">Про магазин</a>
+            <a class="nav-link" href="">Основа</a>
+            <a class="nav-link" href="about.html">Про магазин</a>
         </nav>
         <p class="bobr">Напиши емейл для реєстрації</p>
         <textarea>enter your email to register....</textarea></header>
