--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
     <header>
 <h1>Про  магазин "Хатинка продуктів" </h1>
     <nav>
-            <a class="nav-link" href="">Каталог</a>
-            <a class="nav-link" href="">Про магазин</a>
+            <a class="nav-link" href="katalog.html">Каталог</a>
+            <a class="nav-link" href="ukrainec228.github.io/global/">Основа</a>
         </nav>
 <p class="kotyk"> 
     Я власник цього магазину і на цьому сайті хочу розповісти вам інформацію про нього і дати багато відповідей на запитання.Звернутись до мене можна за номером +380632509909 або в телеграм @Htos228 ще можна написати в інстаграм @toliktree.
