--- a/katalog.html
+++ b/katalog.html
@@ -7,7 +7,7 @@
     <body>
         <header>
               <nav>
-            <a class="nav-link" href="index.html">Основа</a>
+            <a class="nav-link" href="ukrainec228.github.io/global/">Основа</a>
             <a class="nav-link" href="about.html">Про магазин</a>
         </nav>
         <p class="bobr">Напиши емейл для реєстрації</p>
