--- a/about.html
+++ b/about.html
@@ -13,9 +13,8 @@
 <p class="kotyk"> 
     Я власник цього магазину і на цьому сайті хочу розповісти вам інформацію про нього і дати багато відповідей на запитання.Звернутись до мене можна за номером +380632509909 або в телеграм @Htos228 ще можна написати в інстаграм @toliktree.
     </p>
-    <p class="kotyk">
-    На першому сайті ви дізнаєтесь основну інформацію про сайт , в каталозі ви найдете інформацію про товари та їх ціни , а на данному сайті ви можете подивитись фото магазину , продуктів , переглянути про продукти відео або просто послухати музику.</p>
-    <p class="kotyk">Доставка продуктів відбувається укр поштою.Замовлення за номером +380632509909.Вартсть доставки 48 грн по Івано-Франківську.</p>
+    <p class="kotyk">"Хатинка продуктів"- це онлайн магазин продуктів , який працює і має доставку лиш по Івано-Франківську.Раджу хоч би раз завітати до цього онлайн магазину продуктів.В цьому магазині найкраща якість продуктів і хороші ціни , і доставка за 1 день.Не марнуйте часу і робіть закупи в магазині "Хатинка продуктів"</p>
+    <p class="kotyk">Доставка продуктів відбувається укр поштою.Замовлення за номером +380632509909.Вартсть доставки 39 грн по Івано-Франківську.В асортимені є більше десяти продуктів.</p>
     </header>
     <main>
 <iframe width="393" height="221" src="https://www.youtube.com/embed/fi-An9Xig4Q" title="Top 5 Healthy Fruits You Should Not Miss | Healthy Fruits For Health" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe><iframe width="393" height="221" src="https://www.youtube.com/embed/_JnAA6Y97e8" title="The Top 5 Healthiest Foods on Earth" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe><iframe width="323" height="221" src="https://www.youtube.com/embed/_pdXt4jh968" title="Super Foods for your Heart" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe><iframe width="393" height="221="https://www.youtube.com/embed/4pDbm6-uZ4k" title="5 Heart Healthy Foods For A Healthier Heart" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe><br>
