--- a/katalog.html
+++ b/katalog.html
@@ -80,6 +80,6 @@
     </tr>
     </table>
     <br> <p class="ashdwao">Смачного 😄😄😄😄😄😄😄</p> <br>
-    <a class="a" href="https://tea.ua/blog/article/10-naykorisnishikh-produktiv-kharchuvannya-dlya-zdorov-ya/"> Про продукти </a>
+    <a class="a" href="https://tea.ua/blog/article/10-naykorisnishikh-produktiv-kharchuvannya-dlya-zdorov-ya/"> Про здорові продукти </a>
     </body>
     </html>
