--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         </main>
         <footer>
             <div class="footer-logo">
-                <p class="a">Звернутись по запитаннях можна:</p>
+                <p class="a">Якщо залишились питання,то звертайтесь:</p>
                 <ul>
-                    <li>За номером телеофону +380632509909</li>
+                    <li>За номером телефону +380632509909</li>
                     <li>В телеграмі @Htos228</li>
                     <li>В інстаграмі @toliktree</li>
                     <li>В мессенджері @TolyaBezrukii</li>
-                    <li>Майже в будь-яку соцмережу за вище вказаним номером</li>
+                    <li>Майже у будь-яку соцмережу за вище вказаним номером</li>
                    
                 </ul> 
                 <img src="https://i.pinimg.com/originals/7c/31/e8/7c31e801e0d31a2e8edb63ffbf5a9844.jpg" width="350px" height="250px"/>
