--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
             <a class="nav-link" href="index.html">Основа</a>
         </nav>
 <p class="kotyk"> 
-    Я власник цього магазину і на цьому сайті хочу розповісти вам інформацію про нього і дати багато відповідей на запитання.Звернутись до мене можна за номером +380632509909 або в телеграм @Htos228 ще можна написати в інстаграм @toliktree.
+    Я, власник цього магазину, хочу допронього і дати багато відповідей на запитання.Звернутись до мене можна за номером +380632509909 або в телеграм @Htos228 ще можна написати в інстаграм @toliktree.
     </p>
     <p class="kotyk">"Хатинка продуктів"- це онлайн магазин продуктів , який працює і має доставку лиш по Івано-Франківську.Раджу хоч би раз завітати до цього онлайн магазину продуктів.В цьому магазині найкраща якість продуктів і хороші ціни , і доставка за 1 день.Не марнуйте часу і робіть закупи в магазині "Хатинка продуктів"</p>
     <p class="kotyk">Доставка продуктів відбувається укр поштою.Замовлення за номером +380632509909.Вартсть доставки 39 грн по Івано-Франківську.В асортимені є більше десяти продуктів.</p>
@@ -41,7 +41,7 @@
 
 
     <footer>
-    <p class="ce">Красива пісня щоб відпочити</p>
+    <p class="ce">Красива пісня, щоб відпочити</p>
 <iframe width="20%" height="80" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1218954331&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gqy62rtpxgfs" title="v_l_dos" target="_blank" style="color: #cccccc; text-decoration: none;">v_l_dos</a> · <a href="https://soundcloud.com/gqy62rtpxgfs/kalush-stefanya" title="Калуш - Стефанія" target="_blank" style="color: #cccccc; text-decoration: none;">Калуш - Стефанія</a></div>
 
     
