--- a/about.html
+++ b/about.html
@@ -11,10 +11,9 @@
             <a class="nav-link" href="index.html">Основа</a>
         </nav>
 <p class="kotyk"> 
-    Я, власник цього магазину, хочу допронього і дати багато відповідей на запитання.Звернутись до мене можна за номером +380632509909 або в телеграм @Htos228 ще можна написати в інстаграм @toliktree.
+ Я, власник цього магазину , хочу донести Вам інформацію про нього, та відповісти на запитання, що могли виникнути.Звернутись до мене можна за телефоном +380632509909, або через телеграм @Htos228, або ж інстаграм @toliktree.
     </p>
-    <p class="kotyk">"Хатинка продуктів"- це онлайн магазин продуктів , який працює і має доставку лиш по Івано-Франківську.Раджу хоч би раз завітати до цього онлайн магазину продуктів.В цьому магазині найкраща якість продуктів і хороші ціни , і доставка за 1 день.Не марнуйте часу і робіть закупи в магазині "Хатинка продуктів"</p>
-    <p class="kotyk">Доставка продуктів відбувається укр поштою.Замовлення за номером +380632509909.Вартсть доставки 39 грн по Івано-Франківську.В асортимені є більше десяти продуктів.</p>
+    <p class="kotyk">"Хатинка продуктів"- це онлайн магазин, який працює і має доставку лише по Івано-Франківську.Раджу кожному хоч раз до нас завітати. В нас найкраща якість товару та хороші ціни. Не марнуйте часу і робіть закупи в магазині "Хатинка продуктів"))</p>
     </header>
     <main>
 <iframe width="330" height="221" src="https://www.youtube.com/embed/fi-An9Xig4Q" title="Top 5 Healthy Fruits You Should Not Miss | Healthy Fruits For Health" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe><iframe width="330" height="221" src="https://www.youtube.com/embed/_JnAA6Y97e8" title="The Top 5 Healthiest Foods on Earth" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe><iframe width="330" height="221" src="https://www.youtube.com/embed/xyQY8a-ng6g" title="How the food you eat affects your brain - Mia Nacamulli" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe><iframe width="330" height="221" src="https://www.youtube.com/embed/VUyEPf-IvdM" title="Top 10 Healthiest Foods" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe><br>
