--- a/about.html
+++ b/about.html
@@ -10,11 +10,11 @@
             <a class="nav-link" href="katalog.html">Каталог</a>
             <a class="nav-link" href="index.html">Основа</a>
         </nav>
-<p class="kotyk"> 
+<p class="kotyk"> <b>
  Я, власник цього магазину , хочу донести Вам інформацію про нього, та відповісти на запитання, що могли виникнути.Звернутись до мене можна за телефоном +380632509909, або через телеграм @Htos228, або ж інстаграм @toliktree.
-    </p>
-    <p class="kotyk">"Хатинка продуктів"- це онлайн магазин, який працює і має доставку лише по Івано-Франківську.Раджу кожному хоч раз до нас завітати. В нас найкраща якість товару та хороші ціни. Не марнуйте часу і робіть закупи в магазині "Хатинка продуктів"))</p>
-        <p class="kotyk">Доставка продуктів відбувається Новою Поштою. Замовлення оформляти за номером +380632509909. Вартість доскави - від 39 до 69 грн(залежить від об'єму покупки). Більше 10 продуктів в асортименті !!! </p>
+   </b> </p>
+    <p class="kotyk"><b>"Хатинка продуктів"- це онлайн магазин, який працює і має доставку лише по Івано-Франківську.Раджу кожному хоч раз до нас завітати. В нас найкраща якість товару та хороші ціни. Не марнуйте часу і робіть закупи в магазині "Хатинка продуктів"))</b></p>
+        <p class="kotyk"><b>Доставка продуктів відбувається Новою Поштою. Замовлення оформляти за номером +380632509909. Вартість доскави - від 39 до 69 грн(залежить від об'єму покупки). Більше 10 продуктів в асортименті !!! </b></p>
     </header>
     <main>
 <iframe width="330" height="221" src="https://www.youtube.com/embed/fi-An9Xig4Q" title="Top 5 Healthy Fruits You Should Not Miss | Healthy Fruits For Health" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe><iframe width="330" height="221" src="https://www.youtube.com/embed/_JnAA6Y97e8" title="The Top 5 Healthiest Foods on Earth" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe><iframe width="330" height="221" src="https://www.youtube.com/embed/xyQY8a-ng6g" title="How the food you eat affects your brain - Mia Nacamulli" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe><iframe width="330" height="221" src="https://www.youtube.com/embed/VUyEPf-IvdM" title="Top 10 Healthiest Foods" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe><br>
@@ -42,7 +42,7 @@
 
     <footer>
     <p class="ce">Красива пісня, щоб відпочити</p>
-<iframe width="20%" height="80" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1218954331&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gqy62rtpxgfs" title="v_l_dos" target="_blank" style="color: #cccccc; text-decoration: none;">v_l_dos</a> · <a href="https://soundcloud.com/gqy62rtpxgfs/kalush-stefanya" title="Калуш - Стефанія" target="_blank" style="color: #cccccc; text-decoration: none;">Калуш - Стефанія</a></div>
+<p class="stefania"><iframe width="20%" height="80" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1218954331&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe></p><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/gqy62rtpxgfs" title="v_l_dos" target="_blank" style="color: #cccccc; text-decoration: none;">v_l_dos</a> · <a href="https://soundcloud.com/gqy62rtpxgfs/kalush-stefanya" title="Калуш - Стефанія" target="_blank" style="color: #cccccc; text-decoration: none;">Калуш - Стефанія</a></div>
 
     
     </footer>
